# accelerator-microbenchmarks

./: .pre-commit-config.yaml  BUILD_test_xplane  Dockerfile  README.md  a.py  combinations.csv  parse_trace.py  pyproject.toml  requirements.txt  run_v6e_a2a.sh  test_xplane.py
Ironwood/: Ironwood_Microbenchmarks_multihost_readme.md  Ironwood_Microbenchmarks_readme.md  jax_multihost.sh
configs/: 1x_v6e_256.yaml  1x_v6e_256_2.yaml  2x_v6e_16.yaml  2x_v6e_256.yaml  4x_v6e_256.yaml  add.yaml  gemm.yaml  gemm_accum.yaml  gemm_bf16_simple.yaml  gemm_demo.yaml  gemm_demo_small.yaml  gemm_grouped_inference.yaml  gemm_grouped_inference_einsum.yaml  gemm_grouped_inference_ragged_tiled.yaml  gemm_grouped_inference_ragged_tiled_debug.yaml  gemm_grouped_inference_ragged_tiled_mask_true.yaml  gemm_grouped_rescale_inference.yaml  gemm_rescale_inference.yaml  gemm_simple.yaml  gemm_simple_bf16_inference.yaml  gemm_simple_inference.yaml  inference_demo.yaml  quantization.yaml  quantization_inference.yaml  rmsnorm_bwd.yaml  rmsnorm_fwd.yaml  sample_benchmark_attention.yaml  sample_benchmark_hbm.yaml  swiglu_bwd.yaml  swiglu_fwd.yaml  transpose_quantization.yaml  v6e_16x16_a2a.yaml  v6e_4x4_a2a.yaml  v6e_8_all_gather_trace.yaml  v6e_8x8_a2a.yaml  xlml_v6e_128.yaml  xlml_v6e_16_trace.yaml  xlml_v6e_16_trace_ppermute_latency.yaml  xlml_v6e_256.yaml  xlml_v6e_256_trace.yaml  (+5 more)
docs/: DESIGN.md  DEVELOPERS.md  RATIONALE.md  README.md
results/: detailed.json  summary.csv
script/: run_computation_microbenchmark.sh  run_computation_mircrobenchmark.sh  run_ici_microbenchmark.sh  (+2 more)
(+237 files in other folders)
